# codevs

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  input80.txt
src/: Datas.h  Loader.cpp  Loader.h  Logger.cpp  Logger.h  OldSolver.cpp  OldSolver.h  RandSolver.cpp  RandSolver.h  Simulator.cpp  Simulator.h  Solver.cpp  Solver.h  Task.cpp  Task.h  input.txt  main.cpp  tags
